Clean up some Java 9 related deprecated code use and bump gradle wrapper to gradle 6.0.1